# autoreport

./: pyproject.toml
relatorio/: cria.py
