[tool.poetry]
name = "autoreport"
version = "0.1.0"
description = "Gerador de relatórios em latex"
authors = ["Mariana <rochamarianafernandes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
